Switch to vanilla theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = public
 	url = https://github.com/gautamraj/gautamraj.github.io.git
 	branch = main
+[submodule "themes/vanilla-bootstrap-hugo-theme"]
+	path = themes/vanilla-bootstrap-hugo-theme
+	url = https://github.com/zwbetz-gh/vanilla-bootstrap-hugo-theme.git
