--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.com
+baseURL: https://gautamraj.github.io/
 languageCode: en-us
 title: Vanilla
 theme: vanilla-bootstrap-hugo-theme
